# Shake-Pandoc

./: ChangeLog.md  Shakefile.hs  shake-pandoc.cabal
