name:                shake-pandoc
version:             0.1.0.0
synopsis:            Personal build system for pandoc documents
-- description:
license:             GPL-3
license-file:        LICENSE
author:              vaporweb
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable shake-pandoc
  ghc-options:         -with-rtsopts=-I0 -Wall
  main-is:             Shakefile.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.10 && < 4.11
                     , shake >= 0.16 && < 0.17
  -- hs-source-dirs:
  default-language:    Haskell2010
